Migration to Spotify Web API Wrapper 10.0.0 + code maturity